2008-10-17  Thomas Wood  <thomas@linux.intel.com>

	reviewed by: Emmanuele Bassi <ebassi@linux.intel.com>

	* clutter/clutter-color.[ch]: Add GParamSpec and GValue integration
	for ClutterColor. With ClutterParamSpecColor it is possible to define
	color properties; with the GValue integration it's possible to
	automatically transform strings into colors and vice versa.

	(clutter_color_free): Allow NULL parameter to match other boxed
	types destructors.

	(clutter_color_new): Add a constructor for the ClutterColor boxed
	type, mostly for bindings.

2008-10-17  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-color.c (clutter_color_parse): Add checks
	for the arguments, to avoid trying to parse NULL strings.

2008-10-16  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-container.[ch]: Add checks to the Container
	interface invocation methods, to avoid crashing or corrupting
	the stack when an actor does not implement every virtual
	function of the Container interface vtable. GObject allows this
	to happen so we must handle the case gracefully. This also means
	that we can classify some virtual function as mandatory (as is
	the case for ::add, ::remove and ::foreach) and some other
	optional.

2008-10-08  Emmanuele Bassi  <ebassi@linux.intel.com>

	* tests/test-depth.c (raise_top), (main): Fix a shadowing
	with raise() from signal.h.

2008-10-01  Øyvind Kolås  <pippin@linux.intel.com>

	Bug 1108 - Enter/Leave events logics wrt. skipped motion events

	Handle dropped motion events when computing crossing events,
	based on a patch from Gwenole Beauchesne.

	* clutter/clutter-main.c: (clutter_event_get_device): internal static
	utility function.
	(clutter_do_event): generate enter/leave events for all pointer
	events.
	(generate_enter_leave_events): modified enter/leave events generator
	to work for all pointer event types. Enter/leave events are now
	delivered before the motion/button event that caused the crossing to
	happen.